<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HOUSE_MANAGER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_id">请输入账号</string>
    <string name="tv_password">请输入密码</string>
    <string name="tv_login">登录</string>
    <string name="tv_manager">管理员登录</string>
    <string name="tv_seller">销售员登录</string>
    <string name="tv_get_notice">  获取通知</string>
    <string name="tv_add">  添加客户</string>
    <string name="tv_search">  搜索</string>
    <string name="tv_all_house">房源</string>
    <string name="tv_all_client">客户</string>
    <string name="tv_sort">排行</string>
    <string name="tv_info">我的资料</string>
    <string name="tv_name">姓名</string>
    <string name="tv_phone">电话</string>
    <string name="tv_age">年龄</string>
    <string name="tv_time">入职时间</string>
    <string name="tv_sex">性别</string>
    <string name="tv_head">修改头像</string>
    <string name="tv_modify">修改资料</string>
    <string name="tv_leatst">最新</string>
    <string name="tv_size">大小</string>
    <string name="tv_price">价格</string>
    <string name="tv_year">本年</string>
    <string name="tv_month">本月</string>
    <string name="tv_notice">通知列表</string>
    <string name="tv_insert_client">增加客户</string>
    <string name="tv_weichart">微信</string>
    <string name="tv_insert">添加</string>
    <string name="tv_like">客户偏好房源</string>
    <string name="tv_get_info">是否接受通知</string>
    <string name="tv_setting">设置</string>
    <string name="tv_new">检查更新</string>
    <string name="tv_version">版本</string>
    <string name="tv_version2">1.0</string>
    <string name="tv_clean">清除所有数据</string>
    <string name="tv_qiut">退出账号</string>
    <string name="tv_recall">反馈</string>
    <string name="tv_recall2">意见反馈</string>
    <string name="tv_hint">您在使用过程中有任何不适的地方都可以向我们反应哟</string>
    <string name="tv_seller2">销售人员</string>
    <string name="tv_add_house">添加房源</string>
    <string name="tv_add_seller">添加销售人员</string>
    <string name="tv_account">账号</string>
    <string name="tv_password2">密码</string>
    <string name="tv_password_sure">密码确认</string>
    <string name="tv_house_owner">房源拥有者</string>
    <string name="tv_house_name">名称</string>
    <string name="tv_house_location">地点</string>
    <string name="tv_house_size">大小</string>
    <string name="tv_house_year">年限</string>
    <string name="tv_house_price">价格</string>
    <string name="tv_house_brief">简介</string>
    <string name="tv_ok">提交</string>
    <string name="tv_choose">选择图片</string>
    <string name="tv_send_notice">发送通知</string>
    <string name="tv_send">发送</string>
    <string name="tv_name2">名称</string>
    <string name="tv_not_connect">网络未连接</string>
    <string name="no_photo">相册没有图片</string>
    <string name="preview">预览</string>

    <string name="camera_cancel">取消</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="take_pictre">拍照</string>
    <string name="take_pictre_from">从相册获取</string>
    <string name="cancel">取消</string>
    <string name="insert_picture">添加图片</string>
    <string name="unfinished">完成</string>
    <string name="no">未添加信息</string>
    <string name="time_hint">20:15</string>
    <string name="tv_notice_recored">通知纪录</string>
    <string name="tv_zero">0</string>
    <string name="tv_get_time">选择入职时间</string>
    <string name="tv_se_time2">2013年5月14日</string>
    <string name="tv_get_age">选择出生年龄</string>
    <string name="tv_age_is">选择当前年龄</string>
    <string name="tv_boy">男</string>
    <string name="tv_girl">女</string>
    <string name="tv_degree">学历</string>
    <string name="tv_degree_is">大专</string>
    <string name="tv_cancle">取消</string>
    <string name="tv_sure">确认</string>
    <string name="tv_choose_all">全选</string>
    <string name="tv_choose_clear">取消已选</string>
    <string name="tv_choose_no">反选</string>
    <string name="tv_choose_number">选中个数0个</string>
    <string name="tv_delect">删除</string>
    <string name="tv_house_info">详细信息</string>
    <string name="tv_house_owner_info">卖家简介</string>
    <string name="tv_house_info_brief">房屋简介</string>
    <string name="tv_register">新用户</string>
    <string name="tv_deal">交易</string>
    <string name="tv_client_data">资料</string>
    <string name="tv_sellrecord">交易记录</string>
    <string name="tv_buyer1">买家</string>
    <string name="tv_time1">交易时间</string>
    <string name="tv_seller1">交易人</string>
    <string name="tv_price1">交易价格</string>
    <string name="tv_buyerInfo">买家信息</string>
    <string name="tv_buyerName">姓名</string>
    <string name="tv_buyerSex">性别</string>
    <string name="tv_buyerAge">年龄</string>
    <string name="tv_buyerWeichart">微信</string>
    <string name="tv_buyerPhone">电话</string>

</resources>