<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/title_bar_bg"
    android:layout_height="wrap_content" >
    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_picture_bg"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture" >

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"

            android:orientation="vertical" >

            <EditText
                android:id="@+id/ed_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@color/white"
                android:hint="@string/tv_id"
                android:inputType="number"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/devide_line" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@color/white"
                android:hint="@string/tv_password"
                android:inputType="numberPassword"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_info"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:background="@color/white"
            android:text="@string/tv_login"
            android:textColor="@color/gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/gray"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:text="@string/tv_register"
        android:textSize="16sp" />

</RelativeLayout>