<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bar_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_like"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back8"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/common_tab_bg"
            android:clickable="true"
            android:contentDescription="@string/action_settings"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/btn_choose_number"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/title_bar_bg"
            android:padding="0dp"
            android:text="@string/tv_choose_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lv_se_choose_house"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10sp"
            android:dividerHeight="6dp"
            ptr:ptrDrawableStart="@drawable/load" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/white" >

            <Button
                android:id="@+id/btn_choose_all"
                android:layout_width="50sp"
                android:layout_height="30dp"
                android:background="@drawable/dismiss_group_selector"
                android:padding="0dp"
                android:text="@string/tv_choose_all"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_choose_house_ok"
                android:layout_width="50sp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/dismiss_group_selector"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/tv_sure"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_choose_no"
                android:layout_width="50sp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/btn_choose_all"
                android:background="@drawable/dismiss_group_selector"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/tv_choose_no"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_choose_clear"
                android:layout_width="60sp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/btn_choose_no"
                android:background="@drawable/dismiss_group_selector"
                android:padding="0dp"
                android:text="@string/tv_choose_clear"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>