<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_client_deal"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/tools_top_item_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/tools_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_deal"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pop_client_data"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:background="@drawable/tools_normal_item_selector"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/tools_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_client_data"
            android:textColor="@color/white" />
    </LinearLayout>

  
</LinearLayout>