<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/title_bar_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_insert_client"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/back7"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/common_tab_bg"
            android:clickable="true"
            android:contentDescription="@string/action_settings"
            android:onClick="back"
            android:scaleType="centerInside"
            android:src="@drawable/back"
            android:visibility="visible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/gray"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30sp"
            android:text="@string/tv_head"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_se_info_inco_show"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10sp"
            android:contentDescription="@string/action_settings"
            android:scaleType="fitXY"
            android:src="@drawable/display" />

        <ImageView
            android:id="@+id/img_se_modify_icon"
            android:layout_width="45dp"
            android:layout_height="40sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/gotye_bg_gray"
            android:clickable="true"
            android:contentDescription="@string/action_settings"
            android:scaleType="centerInside"
            android:src="@drawable/go"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/nickname_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/nn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_name"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/nn_id"
                android:background="@null"
                android:gravity="right"
                android:inputType="text"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/break_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/nn2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_sex"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <RadioGroup
                    android:id="@+id/ra_client_info_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/ra_client_info_sex_boy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50dp"
                        android:checked="true"
                        android:text="@string/tv_boy" />

                    <RadioButton
                        android:id="@+id/re_client_info_sex_girl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_girl" />
                </RadioGroup>
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/break_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/nn3_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_age"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_client_info_now_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_toLeftOf="@+id/spinner_client_info_modify_age"
                android:text="@string/tv_age_is"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_client_info_modify_age"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10sp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/input_bg"
                android:gravity="center_vertical"
                android:paddingRight="10dp"
                android:prompt="@string/tv_age_is"
                android:text="@string/tv_get_age"
                android:textColor="@color/app_color" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/break_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/nn4_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_phone"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_client_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/nn4_id"
                android:background="@null"
                android:gravity="right"
                android:inputType="phone"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/break_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/nn5_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/tv_weichart"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_client_weichart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/nn5_id"
                android:background="@null"
                android:gravity="right"
                android:inputType="text"
                android:paddingRight="10dp"
                android:singleLine="true" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_insert_client_info_sure"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/input_bg"
            android:text="@string/tv_insert"
            android:textColor="@color/app_color" />
    </LinearLayout>

</LinearLayout>