<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_choose_house"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/action_settings"
        android:scaleType="fitXY"
        android:src="@drawable/no_picture" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_house_location"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </TextView>

            <TextView
                android:id="@+id/tv_choose_house_info_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/no"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_house_size"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_choose_house_info_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/no"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_house_price"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_choose_house_info_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:text="@string/no"
                android:textColor="@color/gray"
                android:textSize="18sp" >
            </TextView>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="right|fill_vertical"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/check_choose_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </RelativeLayout>

</LinearLayout>